fix: make leaflet container overflow visible

--- a/src/index.css
+++ b/src/index.css
@@ -159,4 +159,5 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: visible;
 }
